fixed overlapping issue

--- a/yandex-client/src/Components/Footer/footer.module.scss
+++ b/yandex-client/src/Components/Footer/footer.module.scss
@@ -7,4 +7,5 @@
   text-align: center;
   display: flex;
   justify-content: space-around;
+  z-index: 0;
 }
