--- a/yandex-client/src/Components/layout.module.scss
+++ b/yandex-client/src/Components/layout.module.scss
@@ -18,6 +18,8 @@
   flex-direction: column;
   align-items: center;
   border-radius: 5px;
+  position: relative;
+  z-index: 1;
   @media screen and (max-width: 1200px) {
     width: 70%;
   }
